# surveillance_agent

./: .gitignore  .gitkeep  LICENSE  README.md  config.yaml  container.py  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
app_logging/: __init__.py  service.py
config/: __init__.py  dynaconf.py  factory.py
cookbook/: test_scan_camera_ip.py
cookbook/poc_book/: test_onvif.ipynb
docs/: motion_detection_manager.md
network/: __init__.py  camera_scanner.py
video_pipeline/: __init__.py  config.py  motion_detector.py  pipeline.py  recording_manager.py  run.py  stream_capture.py
video_processing/: README.md  README_WATCHER.md  WHATSAPP_INTEGRATION.md  __init__.py  config.py  face_detection.py  face_detector.py  face_recognizer.py  processed_videos.json  processing_state.py  project_starter.txt  requirements.txt  run.py  run_watcher.py  video_analyzer.py  video_processing_agent.ipynb  watcher.py  whatsapp_notifier.py
