[project]
name = "surveillance-agent"
version = "0.1.0"
description = "Motion-triggered surveillance recording pipeline using RTSP camera feeds with frame differencing"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lokeish And Hitesh" },
]
dependencies = [
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.3",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.13.0.92",
    "openai>=1.61.0",
    "pytapo>=3.4.11",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[project.scripts]
surveillance = "main:main"
